# native-bridge

./: Makefile  README.md  export_presets.cfg  icon.svg.import  project.godot
addons/native_bridge/: native_bridge.gdextension  native_bridge.gdextension.uid
addons/native_bridge/android/src/main/java/com/godotx/nativebridge/: NativeBridgePlugin.kt
addons/native_bridge/cpp/: CMakeLists.txt  config.cmake
addons/native_bridge/cpp/src/: native_bridge.cpp  native_bridge.h  native_bridge_module.cpp
addons/native_bridge/ios/: NativeBridgePlugin.mm
extras/images/: icon.pxd  logo.pxd
scenes/: Main.tscn
scripts/: Main.gd  Main.gd.uid
